--- a/Sudoku Solver.vcxproj
+++ b/Sudoku Solver.vcxproj
@@ -77,7 +77,10 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="kernel.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </ExcludedFromBuild>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="easy.txt" />
@@ -86,6 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="intelisense.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="cpu_version.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
